# stream

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_tests.cpp  stream.cpp  stream.h
cur/: Makefile
cur/akr/: 1.md  2.md
cur/anf/: 1.md
cur/src/: stream.cpp  stream.h
cur/t_src/: run_tests.cpp
delta/: 1.patch  2.patch  3.patch  4.patch  5.patch  6_added-2nd-unit-test.patch
delta/akr/: 1.patch  einfaches-schreiben.patch
delta/anf/: 1.patch  einfaches-schreiben.patch
